syntax = "proto3";

package timber;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

message Timber {
    TimberContext context = 1;
    google.protobuf.Timestamp timestamp = 2;
    map<string, google.protobuf.Any> content = 3;
}

message TimberCollection {
    TimberContext context = 1;
    repeated Timber items = 2;
}

message TimberContext {
    string kafka_topic = 1;
    int32  kafka_partition = 2;
    int32  kafka_replication_factor = 3;
    string es_index_prefix = 4;
    string es_document_type = 5;
    int32  app_max_tps = 6;
    string app_secret = 7;
}

message ProduceResult {
    string topic = 1;
}

service BaritoProducer {
    rpc Produce(Timber) returns (ProduceResult);
    rpc ProduceBatch(TimberCollection) returns (ProduceResult);
}
